--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <script language="javascript">
+window.tdiff = []; fred = function(a,b){return a-b;};
+window.document.onload = function(e){ 
+    console.log("document.onload", e, Date.now() ,window.tdiff,  
+    (window.tdiff[0] = Date.now()) && window.tdiff.reduce(fred) ); 
+}
+window.onload = function(e){ 
+    console.log("window.onload", e, Date.now() ,window.tdiff, 
+    (window.tdiff[1] = Date.now()) && window.tdiff.reduce(fred) ); 
+}
+</script>
+  </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages...</p>
-</body>
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+<img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  </body>
 </html>
