--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ window.onload = function(e){
   </head>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages...</p>
+<p>test</p>
   <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
 <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
   <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
