--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@ window.onload = function(e){
 <body>
 <h1>Hello World</h1>
 <p>test</p>
-  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
-<img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
-  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
-  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
-  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+
   </body>
 </html>
