--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@ window.onload = function(e){
 <h1>Hello World</h1>
 <p>test</p>
   <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
-  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
-  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
-  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
-  <img alt="Fridtjof Nansen’s 156th Birthday" border="0" height="220" src="https://www.google.com/logos/doodles/2017/fridtjof-nansens-156th-birthday-5694774550986752-law.gif" style="padding-top:0px" title="Fridtjof Nansen’s 156th Birthday" width="644" onload="window.lol&amp;&amp;lol()">
+  <img alt="Fridtjof" src="https://www.google.com/logos/doodles/2017/childrens-day-2017-guatemala-5188605138960384-2x.png">
+  <img alt="Fridtjof" src="http://i.imgur.com/xLV4F9V.jpg">
+  <img alt="Fridtjof" src="http://www.less-real.com/imagevault/uploaded/images/part5/Fade-20323.jpg">
 
   </body>
 </html>
