--- a/AMP.html
+++ b/AMP.html
@@ -18,7 +18,7 @@
   </style>
     
     <!-- DECLARE CATCHPOINT RUM TAG (http://g.3gl.net/jp/397/v3.1.2/M)-->
-<script async custom-element="amp-analytics" src=" https://cdn.ampproject.org/c/itzloy.github.io/cp.js"></script>
+<!--<script async custom-element="amp-analytics" src=" https://cdn.ampproject.org/c/itzloy.github.io/cp.js"></script>-->
     <!-- POST DATA TO CATCHPOINT -->
 <!--<amp-analytics type='Catchpoint RUM'>
 <script type="application/json">
