--- a/AMP.html
+++ b/AMP.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html ⚡>
 <head>
   
@@ -43,6 +42,8 @@
 </script>
 </amp-analytics>-->
   
+ <amp-pixel src="https://g.3gl.net/jp/397/v3.1.2/M?ref=AMPDOC_URL"></amp-pixel>
+  
 <amp-analytics type="catchpoint" id="catchpoint">
 <script type="application/json">
   {
@@ -53,13 +54,3 @@
   }
 </script>
 </amp-analytics>
-  
-  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-</head>
-<body>
-  
-  <h1>Hello World!</h1>
-    <button id='amzBt' onclick="location.href='file:///C:/wamp64/www/Integration/Page2.html'" style="width:30px;"></button>
-</body>
-</html>
- 
