--- a/index.html
+++ b/index.html
@@ -2,33 +2,45 @@
 <html>
 <head>
 <style>
-    #maindiv{
-        height:100px;
-        width:100px;
-        color:gray;
-    }
-img {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: -1;
+    .red, .green, .blue {
+  position: absolute;
+  width: 100px;
+  color: white;
+  line-height: 100px;
+  text-align: center;
+}
+
+.red {
+  z-index: 1;
+  top: 20px;
+  left: 20px;
+  background: red;
+}
+
+.green {
+  top: 60px;
+  left: 60px;
+  background: green;
+}
+
+.blue {
+  top: 100px;
+  left: 100px;
+  background: blue;
 }
 </style>
 </head>
 <body>
-<h1>The z-index Property</h1>
-
-<img src="w3css.gif" width="100" height="140">
-<script> 
-	function id(){
-    	console.log("hey hey hey");
-        };
-    function btnclick(){
-        console.log("button");
-        }
-<div id="maindiv" onclick="id()">
-<p>Because the image has a z-index of -1, it will be placed behind the heading.</p>
-</div>
+        <div>
+                <span class="red">Red</span>
+              </div>
+              <div>
+                <span class="green">Green</span>
+              </div>
+              <div>
+                <span class="blue">Blue</span>
+              </div>
+              
 
 </body>
 </html>
