--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="divid" onclick="dividclick()">
         
               <div>
-                <span class="green" onclick="greenclick()">Green</span>
+                <input type="button" class="green" onclick="greenclick()" value="click here">
               </div>
               
             </div>
