--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <p><img src="1.jpg" alt="artbaje" height="42" width="42"></p>
+  <p><img src="https://github.com/itzloy/itzloy.github.io/blob/master/artbaje/1.JPG" alt="artbaje" height="42" width="42"></p>
   <p><img src="2.jpgf" alt="artbaje face" height="42" width="42"></p>
   <p><img src="3.jpg" alt="artbaje face" height="42" width="42"></p>
   <p><img src="4.jpgf" alt="artbaje face" height="42" width="42"></p>
