--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <p><img src="https://github.com/itzloy/itzloy.github.io/blob/master/artbaje/1.JPG" alt="artbaje" height="42" width="42"></p>
-  <p><img src="2.jpgf" alt="artbaje face" height="42" width="42"></p>
+  <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" alt="artbaje face" height="42" width="42"></p>
   <p><img src="3.jpg" alt="artbaje face" height="42" width="42"></p>
   <p><img src="4.jpgf" alt="artbaje face" height="42" width="42"></p>
 </body>
