--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -13,7 +13,7 @@
   <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG" alt="artbaje" height="500" width="600"></p>
   <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" alt="artbaje face" height="500" width="600"></p>
   <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" alt="artbaje face" height="500" width="600"></p>
-  <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="artbaje face" height="500" width="600" rotate="90"></p>
+  <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="artbaje face" height="500" width="600" style="transform:rotate(90deg);"></p>
 </body>
 
 </html>
