--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -14,6 +14,8 @@
   <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" alt="artbaje face" height="500" width="600"></p>
   <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" alt="artbaje face" height="500" width="600"></p>
   <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="artbaje face" height="500" width="600"></p>
+  <p><img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" alt="artbaje face" height="500" width="600"></p>
+
 </body>
 
 </html>
