--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -42,7 +42,7 @@
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" alt="artbaje" height="500" width="600">
   </div>
     <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="artbaje" height="500" width="600">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="artbaje" height="500" width="600" style="transform:rotate(90deg);">
   </div>
     <div class="column">
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" alt="artbaje" height="500" width="600">
