--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -25,11 +25,23 @@
   clear: both;
   display: table;
 }
+    
+.three-columns {
+  width: 32%;
+  display: inline-block;
+}
+
 </style>
 
 </head>
 
 <body>
+ 
+<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG" width="960" height="640" />
+<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" width="960" height="640" />
+<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" width="960" height="640" />
+<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" width="960" height="640" />
+<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" width="960" height="640" /> 
   
 <div class="row">
   <div class="column">
