--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -22,7 +22,9 @@
 <img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" width="600" height="300" />
 <img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" width="600" height="300" />
 <img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" width="600" height="300""/>
-<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" width="600" height="300" /> 
+<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" width="600" height="300""/>
+<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/6.JPG" width="600" height="300""/>
+<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/7.JPG" width="600" height="300""/>
 
 </body>
 </html>
