--- a/test creator/index.html
+++ b/test creator/index.html
@@ -19,7 +19,7 @@
         <div class="header-inner clearfix">
             <div class="logo">
                 <a title="Home" href="http://www.catchpoint.com">
-              <img src="http://theme.zdassets.com/theme_assets/540700/5503c921e70bb0ed4660ab13454fb4eb0d0b06d2.png" alt="Logo">
+              <!--<img src="http://theme.zdassets.com/theme_assets/540700/5503c921e70bb0ed4660ab13454fb4eb0d0b06d2.png" alt="Logo">-->
           </a>
             </div>
         </div>
@@ -80,7 +80,7 @@
         <aside id="text-5" class="widget widget_text">
             <div class="textwidget">
                 <div class="col-md-4">
-                    <p>© 2018 Catchpoint Systems, Inc</p>
+                    <p></p>
                 </div>
             </div>
         </aside>
