--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -1,30 +1,109 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <title>ArtBaje</title>
-  <meta name="author" content="foo">
-  <meta name="description" content="artbaje">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-.three-columns {
-  width: 32%;
-  display: inline-block;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+/* The grid: Four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 25%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container */
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the expanded image */
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
 }
 </style>
-
 </head>
 <body>
- 
-<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG" width="600" height="300" />
-<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" width="600" height="300" />
-<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" width="600" height="300" />
-<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" width="600" height="300"/>
-<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" width="600" height="300"/>
-<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/6.JPG" width="600" height="300"/>
-<img class="three-columns" src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/7.JPG" width="600" height="300"/>
+
+<div style="text-align:center">
+  <h2>Tabbed Image Gallery</h2>
+  <p>Click on the images below:</p>
+</div>
+
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+</div>
+
+
+<!-- The four columns -->
+<div class="row">
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG" alt="Nature" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+
+
+
+<script>
+function myFunction(imgs) {
+  var expandImg = document.getElementById("expandedImg");
+  var imgText = document.getElementById("imgtext");
+  expandImg.src = imgs.src;
+  imgText.innerHTML = imgs.alt;
+  expandImg.parentElement.style.display = "block";
+}
+</script>
 
 </body>
 </html>
+
