--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -65,8 +65,8 @@ body {
 <body>
 
 <div style="text-align:center">
-  <h2>Tabbed Image Gallery</h2>
-  <p>Click on the images below:</p>
+  <h2>ArtBaje</h2>
+  <p>?</p>
 </div>
 
 <div class="container">
