--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -90,6 +90,9 @@ body {
   <div class="column">
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
   </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
+  </div>
 </div>
 
 
