--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -91,7 +91,31 @@ body {
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/6.JPG" alt="Nature" style="width:60%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/7.JPG" alt="Snow" style="width:60%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/8.JPG" alt="Mountains" style="width:60%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/9.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/10.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/11.JPG" alt="Mountains" style="width:60%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/12.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/13.JPG" alt="Lights" style="width:60%" onclick="myFunction(this);">
   </div>
 </div>
 
