--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -14,7 +14,7 @@ body {
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-  float: left;
+  float: center;
   width: 10%;
   padding: 10px;
 }
