--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -14,7 +14,7 @@ body {
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
-  float: center;
+  float: left;
   width: 10%;
   padding: 10px;
 }
@@ -38,6 +38,7 @@ body {
 
 /* The expanding image container */
 .container {
+  float: center;
   position: relative;
   display: none;
 }
