--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -38,8 +38,9 @@ body {
 
 /* The expanding image container */
 .container {
-  float: center;
-  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   display: none;
 }
 
