--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -38,9 +38,10 @@ body {
 
 /* The expanding image container */
 .container {
+  display: block;
   margin-left: auto;
   margin-right: auto;
-  display: none;
+  width: 50%;
 }
 
 /* Expanding image text */
