--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -15,7 +15,7 @@ body {
 /* The grid: Four equal columns that floats next to each other */
 .column {
   float: left;
-  width: 10%;
+  width: 200px;
   padding: 10px;
 }
 
