--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -39,10 +39,9 @@ body {
 
 /* The expanding image container */
 .container {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 70%;
+  float: center;
+  width: 50%;
+  padding: 10px;
 }
 
 /* Expanding image text */
