--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -39,9 +39,9 @@ body {
 
 /* The expanding image container */
 .container {
-  display: block;
-  float: center;
+  margin: auto;
   width: 50%;
+  border: 3px solid green;
   padding: 10px;
 }
 
@@ -68,7 +68,7 @@ body {
 <body>
 
 <div style="text-align:center">
-  <h2>artbaje</h2>
+  <h2>artbaje 1</h2>
 </div>
 
 <div class="container">
