--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -18,7 +18,7 @@ body {
   float: left;
   width: 100px;
   padding: 10px;
-  border: 3px solid green;
+  border: 3px solid #070707;
 }
 
 /* Style the images inside the grid */
@@ -42,7 +42,7 @@ body {
 .container {
   margin: auto;
   width: 50%;
-  border: 3px solid green;
+  border: 3px solid #070707;
   padding: 10px;
 }
 
@@ -69,7 +69,7 @@ body {
 <body>
 
 <div style="text-align:center">
-  <h2>artbaje 2</h2>
+  <h2>artbaje 3</h2>
 </div>
 
 <div class="container">
