--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -5,7 +5,7 @@
 <style>
 * {
   box-sizing: border-box;
-  background-color: #1f2123;
+  background-color: #454d66;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
   float: left;
   width: 100px;
   padding: 10px;
-  border: 3px solid #070707;
+  border: 3px solid #009975;
 }
 
 /* Style the images inside the grid */
@@ -42,7 +42,7 @@ body {
 .container {
   margin: auto;
   width: 50%;
-  border: 3px solid #070707;
+  border: 3px solid #009975;
   padding: 10px;
 }
 
@@ -68,8 +68,8 @@ body {
 </head>
 <body>
 
-<div style="text-align:center">
-  <h2>artbaje 3</h2>
+<div style="text-align:center; color:#d9d872">
+  <h2>artbaje 4</h2>
 </div>
 
 <div class="container">
