--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -5,7 +5,7 @@
 <style>
 * {
   box-sizing: border-box;
-  background-color: #222831;
+  background-color: #e8e8e8;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
   float: left;
   width: 100px;
   padding: 10px;
-  border: 3px solid #eeeeee;
+  border: 3px solid #5588a3;
 }
 
 /* Style the images inside the grid */
@@ -42,7 +42,7 @@ body {
 .container {
   margin: auto;
   width: 50%;
-  border: 3px solid #eeeeee;
+  border: 3px solid #5588a3;
   padding: 10px;
 }
 
@@ -68,8 +68,8 @@ body {
 </head>
 <body>
 
-<div style="text-align:center; color:#d65a31">
-  <h2>artbaje 5</h2>
+<div style="text-align:center; color:#00334e">
+  <h2>artbaje 6</h2>
 </div>
 
 <div class="container">
