--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -69,7 +69,7 @@ body {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>artbaje 7</h2>
+  <h2>artbaje 8</h2>
 </div>
 
 <div class="container">
@@ -82,13 +82,13 @@ body {
 <!-- The four columns -->
 <div class="row">
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG" alt="Nature"  onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG" alt="Nature" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" alt="Snow"  onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" alt="Mountains"  onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
