--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -12,6 +12,11 @@ body {
   margin: 0;
   font-family: Arial;
 }
+  
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 
 /* The grid: Four equal columns that floats next to each other */
 .column {
@@ -69,7 +74,7 @@ body {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>artbaje 9</h2>
+  <h2>artbaje 0</h2>
 </div>
 
 <div class="container">
