--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -46,9 +46,9 @@ img {
 /* The expanding image container */
 .container {
   margin: auto;
-  width: 30%;
+  width: 100%;
   border: 3px solid #5588a3;
-  padding: 10px;
+  margin: 10px;
 }
 
 /* Expanding image text */
@@ -74,7 +74,7 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>artbaje 0</h2>
+  <h2>artbaje 1</h2>
 </div>
 
 <div class="container">
