--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -16,6 +16,7 @@ body {
 img {
     max-width: 100%;
     max-height: 100%;
+    vertical-align: middle;
 }
 
 /* The grid: Four equal columns that floats next to each other */
@@ -74,7 +75,7 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>artbaje 1</h2>
+  <h2>artbaje 2</h2>
 </div>
 
 <div class="container">
@@ -82,7 +83,6 @@ img {
   <img id="expandedImg">
   <div id="imgtext"></div>
 </div>
-
 
 <!-- The four columns -->
 <div class="row">
@@ -126,8 +126,6 @@ img {
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/13.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
-
-
 
 <script>
 function myFunction(imgs) {
