--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -49,7 +49,6 @@ img {
   width: 100%;
   border: 3px solid #5588a3;
   margin: 10px;
-  vertical-align: middle;
 }
 
 /* Expanding image text */
@@ -75,12 +74,12 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>artbaje 3</h2>
+  <h2>artbaje 4</h2>
 </div>
 
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg">
+  <img id="expandedImg" style="vertical-align: middle;">
   <div id="imgtext"></div>
 </div>
 
