--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -74,12 +74,12 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>artbaje 4</h2>
+  <h2>artbaje 5</h2>
 </div>
 
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="vertical-align: middle;">
+  <img id="expandedImg" style="vertical-align: middle; text-align: center;">
   <div id="imgtext"></div>
 </div>
 
