--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -16,6 +16,7 @@ body {
 img {
     max-width: 100%;
     max-height: 100%;
+    margin: auto;
 }
 
 /* The grid: Four equal columns that floats next to each other */
@@ -74,12 +75,12 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>artbaje 6</h2>
+  <h2>artbaje 7</h2>
 </div>
 
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="vertical-align: middle; text-align: center;  margin: auto;">
+  <img id="expandedImg">
   <div id="imgtext"></div>
 </div>
 
