--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -75,7 +75,7 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>artbaje 7</h2>
+  <h2>artBaje</h2>
 </div>
 
 <div class="container">
@@ -124,6 +124,21 @@ img {
   </div>
   <div class="column">
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/13.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/14.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/15.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/16.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/17.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/18.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
 
