--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -77,6 +77,9 @@ img {
 <div style="text-align:center; color:#00334e">
   <h2>artBaje</h2>
 </div>
+<marquee attribute_name = "ArtBaje">
+   merch available... contact foo.. who??
+</marquee>
 
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
