--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -91,69 +91,76 @@ img {
 <!-- The four columns -->
 <div class="row">
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG" alt="1" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/2.JPG" alt="2" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/3.JPG" alt="3" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/18.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/18.JPG" alt="4" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/5.JPG" alt="5" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/6.JPG" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/6.JPG" alt="6" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/7.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/7.JPG" alt="7" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/8.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/8.JPG" alt="8" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/9.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/9.JPG" alt="9" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/10.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/10.JPG" alt="10" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/11.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/11.JPG" alt="11" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/12.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/12.JPG" alt="12" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/13.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/13.JPG" alt="13" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/14.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/14.JPG" alt="14" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/15.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/15.JPG" alt="15" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/16.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/16.JPG" alt="16" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/17.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/17.JPG" alt="17" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="18" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
 
 <script>
 function myFunction(imgs) {
   var expandImg = document.getElementById("expandedImg");
-  var imgText = document.getElementById("imgtext");
+  //var imgText = document.getElementById("imgtext");
   expandImg.src = imgs.src;
-  imgText.innerHTML = imgs.alt;
+  //imgText.innerHTML = imgs.alt;
   expandImg.parentElement.style.display = "block";
 }
+
+function defaultPicture() {
+  var expandImg = document.getElementById("expandedImg");
+  expandImg.src = "https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG";
+  //expandImg.parentElement.style.display = "block";
+}
+window.onload = defaultPicture;
 </script>
 
 </body>
