--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -50,7 +50,7 @@ img {
   margin: auto;
   width: 100%;
   border: 3px solid #5588a3;
-  margin: 10px;
+  margin: 0 0 0 10px;
 }
 
 /* Expanding image text */
