--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -144,6 +144,24 @@ img {
   <div class="column">
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/4.JPG" alt="18" style="width:100%" onclick="myFunction(this);">
   </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/19.JPG" alt="19" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/20.JPG" alt="20" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/21.JPG" alt="21" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/22.JPG" alt="22" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/23.JPG" alt="23" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="24" style="width:100%" onclick="myFunction(this);">
+  </div>
 </div>
 
 <script>
