--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -47,7 +47,6 @@ img {
 
 /* The expanding image container */
 .container {
-  margin: auto;
   width: 100%;
   border: 3px solid #5588a3;
   margin: 0 0 10px 0;
@@ -76,7 +75,7 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>#artBaje</h2>
+  <h2>#artBaje 1</h2>
 </div>
 <marquee attribute_name = "ArtBaje">
    merch available... contact foo.. who??
@@ -84,7 +83,7 @@ img {
 
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg">
+  <img id="expandedImg" style="text-align: center">
   <div id="imgtext"></div>
 </div>
 
