--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -177,7 +177,7 @@ function defaultPicture() {
   expandImg.src = "https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/1.JPG";
   //expandImg.parentElement.style.display = "block";
 }
-defaultPicture;
+window.onload = defaultPicture;
 </script>
 
 </body>
