--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -75,15 +75,15 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>#artBaje 1</h2>
+  <h2>#artBaje 2</h2>
 </div>
 <marquee attribute_name = "ArtBaje">
    merch available... contact foo.. who??
 </marquee>
 
-<div class="container">
+<div class="container" style="text-align: center">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="text-align: center">
+  <img id="expandedImg">
   <div id="imgtext"></div>
 </div>
 
