--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -75,7 +75,7 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h2>#artBaje 2</h2>
+  <h1>#artBaje</h1>
 </div>
 <marquee attribute_name = "ArtBaje">
    merch available... contact foo.. who??
