--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -161,6 +161,36 @@ img {
   <div class="column">
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="24" style="width:100%" onclick="myFunction(this);">
   </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="25" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="26" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="27" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="28" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="29" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="30" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="31" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="32" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="33" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/24.JPG" alt="34" style="width:100%" onclick="myFunction(this);">
+  </div>
 </div>
 
 <script>
