--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -77,7 +77,7 @@ img {
 <div style="text-align:center; color:#00334e">
   <h1>#artBaje</h1>
 </div>
-<marquee attribute_name = "ArtBaje">
+<marquee attribute_name = "ArtBaje" onclick="myFunction(this); src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/merch.JPG" >
    merch available... contact foo.. who??
 </marquee>
 
