--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -75,10 +75,10 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h1>#artBaje</h1>
+  <h1>#artBaje 1</h1>
 </div>
-<marquee attribute_name = "ArtBaje" onclick="myFunction(this); src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/merch.JPG" >
-   merch available... contact foo.. who??
+<marquee attribute_name = "ArtBaje" >
+   <a onclick="myFunction(this); src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/merch.JPG" >merch available... contact foo.. who??</a>
 </marquee>
 
 <div class="container" style="text-align: center">
