--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -77,11 +77,10 @@ img {
 <div style="text-align:center; color:#00334e">
   <h1>#artBaje 2</h1>
 </div>
-  <a onclick="myFunction1(); >
-    <marquee attribute_name = "ArtBaje" >
+    <marquee attribute_name = "ArtBaje" onclick="myFunction1();" >
        merch available... contact foo.. who??
     </marquee>
-  </a>
+
 
 <div class="container" style="text-align: center">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
