--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -75,7 +75,7 @@ img {
 <body>
 
 <div style="text-align:center; color:#00334e">
-  <h1>#artBaje 2</h1>
+  <h1>#artBaje</h1>
 </div>
     <marquee attribute_name = "ArtBaje" onclick="myFunction1();" >
        merch available... contact foo.. who??
