--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -22,6 +22,7 @@ img {
 /* The grid: Four equal columns that floats next to each other */
 .column {
   float: left;
+  padding: 2px;
   width: 100px;
   height: 80px;
   border: 3px solid #5588a3;
