--- a/artbaje/index.html
+++ b/artbaje/index.html
@@ -192,6 +192,21 @@ img {
   <div class="column">
     <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/34.JPG" alt="34" style="width:100%" onclick="myFunction(this);">
   </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/35.JPG" alt="35" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/36.JPG" alt="36" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/37.JPG" alt="37" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/38.JPG" alt="38" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/itzloy/itzloy.github.io/master/artbaje/39.JPG" alt="39" style="width:100%" onclick="myFunction(this);">
+  </div>
 </div>
 
 <script>
