--- a/video.html
+++ b/video.html
@@ -6,7 +6,12 @@
   <link href="style.css" rel="stylesheet" />
 </head>
 <body>Hello
-  <video src="http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4" width="640px" height="380px" autoplay/>
+  <video width="320" height="240" controls>
+  <source src="http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4" type="video/mp4">
+  
+  Your browser does not support the video tag.
+</video>
+  
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script>
   </script>
