--- a/video.html
+++ b/video.html
@@ -5,8 +5,8 @@
   <title></title>
   <link href="style.css" rel="stylesheet" />
 </head>
-<body>Hello
-  <video width="320" height="240" autoplay>
+<body>
+  <video width="320" height="240" controls autoplay>
   <source src="http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4" type="video/mp4">
   
   Your browser does not support the video tag.
