--- a/video.html
+++ b/video.html
@@ -4,14 +4,25 @@
   <meta charset="utf-8">
   <title></title>
   <link href="style.css" rel="stylesheet" />
+    <link href="https://vjs.zencdn.net/7.6.5/video-js.css" rel="stylesheet">
+  <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
+  <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
 </head>
 <body>
   <video width="320" height="240" controls autoplay>
-  <source src="http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4" type="video/mp4">
-  
-  Your browser does not support the video tag.
-</video>
-  <script>
-  </script>
+    <source src="http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <p>videojs</p>
+  <video id='my-video' class='video-js' controls preload='auto' width='640' height='264'
+  poster='MY_VIDEO_POSTER.jpg' data-setup='{}'>
+    <source src='MY_VIDEO.mp4' type='video/mp4'>
+    <source src='MY_VIDEO.webm' type='video/webm'>
+    <p class='vjs-no-js'>
+      To view this video please enable JavaScript, and consider upgrading to a web browser that
+      <a href='https://videojs.com/html5-video-support/' target='_blank'>supports HTML5 video</a>
+    </p>
+  </video>
+  <script src='https://vjs.zencdn.net/7.6.5/video.js'></script> 
 </body>
 </html>
