--- a/video.html
+++ b/video.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <link href="style.css" rel="stylesheet" />
+  <title>Video Stream</title>
     <link href="https://vjs.zencdn.net/7.6.5/video-js.css" rel="stylesheet">
   <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
   <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
@@ -14,7 +13,7 @@
     Your browser does not support the video tag.
   </video>
   <p>videojs</p>
-  <video id='my-video' class='video-js' controls preload='auto' width='640' height='264' data-setup='{}'>
+  <video id='my-video' class='video-js' controls autoplay preload='auto' width='640' height='264' data-setup='{}'>
     <source src='http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4#t=,20' type='video/mp4'>
     <p class='vjs-no-js'>
       To view this video please enable JavaScript, and consider upgrading to a web browser that
@@ -24,3 +23,7 @@
   <script src='https://vjs.zencdn.net/7.6.5/video.js'></script> 
 </body>
 </html>
+
+
+
+
